@@ -1,6 +1,7 @@
 Version 1.9.10:
 + Use /dev/shm for temp files if available
 + Added "folded" option to use a folded JSFS
++ Added documentation for fasta2jsfs()
 
 Version 1.9.9:
 + Reworked the demographic model class to be more flexible and consistent.
